--- a/package.json
+++ b/package.json
@@ -15,5 +15,24 @@
   "bugs": {
     "url": "https://github.com/anderson06/desafio-pagina-ofertas/issues"
   },
-  "homepage": "https://github.com/anderson06/desafio-pagina-ofertas"
+  "homepage": "https://github.com/anderson06/desafio-pagina-ofertas",
+  "devDependencies": {
+    "browser-sync": "^2.10.0",
+    "browserify": "^12.0.1",
+    "del": "^2.1.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "lodash": "^3.10.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.1"
+  }
 }
