--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "lodash": "^3.10.1",
+    "susy": "^2.2.6",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
