--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "jquery": "^2.1.4",
     "lodash": "^3.10.1",
+    "slick-carousel": "^1.5.8",
     "susy": "^2.2.6",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
