--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Projeto desafio Hotel Urbano",
   "main": "index.js",
   "scripts": {
+    "start": "node ./bin/www",
     "test": "make test"
   },
   "repository": {
@@ -16,6 +17,15 @@
     "url": "https://github.com/anderson06/desafio-pagina-ofertas/issues"
   },
   "homepage": "https://github.com/anderson06/desafio-pagina-ofertas",
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
+  },
   "devDependencies": {
     "browser-sync": "^2.10.0",
     "browserify": "^12.0.1",
@@ -24,6 +34,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-jade": "^1.1.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-nodemon": "^2.0.4",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
