--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "handlebars": "^4.0.5",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "slick-carousel": "^1.5.8",
