--- a/package.json
+++ b/package.json
@@ -42,8 +42,18 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "handlebars": "^4.0.5",
+    "jasmine-core": "^2.3.4",
+    "jasmine-jquery": "^2.1.1",
     "jquery": "^2.1.4",
+    "karma": "^0.13.15",
+    "karma-browserify": "^4.4.1",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-jasmine": "^0.3.6",
+    "karma-jasmine-jquery": "^0.1.1",
+    "karma-jquery": "^0.1.0",
+    "karma-phantomjs-launcher": "^0.2.1",
     "lodash": "^3.10.1",
+    "phantomjs": "^1.9.19",
     "slick-carousel": "^1.5.8",
     "susy": "^2.2.6",
     "vinyl-buffer": "^1.0.0",
