Add select2 and styleguide

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "gulp-nodemon": "^2.0.4",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.0",
+    "gulp-sass": "^2.3.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
@@ -54,6 +54,7 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "lodash": "^3.10.1",
     "phantomjs": "^1.9.19",
+    "select2": "^4.0.2",
     "slick-carousel": "^1.5.8",
     "susy": "^2.2.6",
     "vinyl-buffer": "^1.0.0",
