--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "select2": "^4.0.2",
     "slick-carousel": "^1.5.8",
     "susy": "^2.2.6",
+    "underscore.string": "^3.3.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
