--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Projeto desafio Hotel Urbano",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "make test"
+    "start": "./node_modules/gulp/bin/gulp.js",
+    "test": "./node_modules/karma/bin/karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -55,8 +55,6 @@
     "lodash": "^3.10.1",
     "phantomjs": "^1.9.19",
     "select2": "^4.0.2",
-    "slick-carousel": "^1.5.8",
-    "susy": "^2.2.6",
     "underscore.string": "^3.3.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
